update latest code 12/20/2025

--- a/index.html
+++ b/index.html
@@ -3,21 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VisionariesAI Labs | AI Solutions & Products</title>
-    <meta name="description" content="VisionariesAI Labs - Leading AI service and product company. We build intelligent systems that transform businesses. Custom AI solutions, ML products, and enterprise consulting." />
+
+    <title>VisionariesAI Labs Pvt Ltd</title>
+
+    <!-- ✅ Browser Tab Logo (Favicon) -->
+    <link rel="icon" type="image/png" href="././public/icon.png" />
+    <link rel="apple-touch-icon" href="././public/icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- ✅ SEO -->
+    <meta
+      name="description"
+      content="VisionariesAI Labs - Leading AI service and product company. We build intelligent systems that transform businesses. Custom AI solutions, ML products, and enterprise consulting."
+    />
     <meta name="author" content="VisionariesAI Labs" />
-    <meta name="keywords" content="AI, Artificial Intelligence, Machine Learning, ML, AI Products, AI Services, Enterprise AI, VisionariesAI" />
+    <meta
+      name="keywords"
+      content="AI, Artificial Intelligence, Machine Learning, ML, AI Products, AI Services, Enterprise AI, VisionariesAI"
+    />
+    <link rel="canonical" href="https://visionariesai.com/" />
 
+    <!-- ✅ Open Graph (WhatsApp/FB/LinkedIn) -->
     <meta property="og:title" content="VisionariesAI Labs | AI Solutions & Products" />
-    <meta property="og:description" content="Transform your business with cutting-edge AI solutions. Custom AI development, ML products, and enterprise consulting." />
+    <meta
+      property="og:description"
+      content="Transform your business with cutting-edge AI solutions. Custom AI development, ML products, and enterprise consulting."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://visionariesai.com/" />
+    <meta property="og:image" content="https://visionariesai.com/og-image.png" />
 
+    <!-- ✅ Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@VisionariesAI" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <link rel="canonical" href="https://visionariesai.com" />
+    <meta name="twitter:image" content="https://visionariesai.com/og-image.png" />
   </head>
 
   <body>
