--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <title>VisionariesAI Labs Pvt Ltd</title>
 
     <!-- ✅ Correct paths for Vite (NO /public/) -->
-    <link rel="icon" type="image/png" href="./icon.png" />
-    <link rel="apple-touch-icon" href="./icon.png" />
+    <link rel="icon" type="image/png" href="./public/icon.png" />
+    <link rel="apple-touch-icon" href="./public/icon.png" />
     <link rel="manifest" href="./site.webmanifest" />
 
     <!-- ✅ SEO -->
@@ -41,12 +41,12 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://visionariesai.com/" />
-    <meta property="og:image" content="https://visionariesai.com/og-image.png" />
+    <meta property="og:image" content="./public/icon.png" />
 
     <!-- ✅ Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@VisionariesAI" />
-    <meta name="twitter:image" content="https://visionariesai.com/og-image.png" />
+    <meta name="twitter:image" content="./public/icon.png" />
   </head>
 
   <body>
