--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <title>VisionariesAI Labs Pvt Ltd</title>
 
     <!-- ✅ Correct paths for Vite (NO /public/) -->
-    <link rel="icon" type="image/png" href="./public/icon.png" />
-    <link rel="apple-touch-icon" href="./public/icon.png" />
+    <link rel="icon" type="image/png" href="/icon.png" />
+    <link rel="apple-touch-icon" href="/icon.png" />
     <link rel="manifest" href="./site.webmanifest" />
 
     <!-- ✅ SEO -->
