update latest code 1/22/2025

--- a/index.html
+++ b/index.html
@@ -1,45 +1,41 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>VisionariesAI Labs Pvt Ltd</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- ✅ Favicon / Site Icon (Google uses this) -->
-    <link rel="icon" href="/icon.png" />
-    <link rel="apple-touch-icon" href="/icon.png" />
+  <title>VisionariesAI Labs Pvt Ltd</title>
 
-    <!-- ✅ SEO -->
-    <meta
-      name="description"
-      content="VisionariesAI Labs - Leading AI service and product company. We build intelligent systems that transform businesses. Custom AI solutions, ML products, and enterprise consulting."
-    />
-    <meta name="author" content="VisionariesAI Labs" />
-    <meta
-      name="keywords"
-      content="AI, Artificial Intelligence, Machine Learning, ML, AI Products, AI Services, Enterprise AI, VisionariesAI"
-    />
-    <link rel="canonical" href="https://visionariesai.com/" />
+  <!-- ✅ Favicon / Site Icon (Google uses this) -->
+  <link rel="icon" href="/icon.png" />
+  <link rel="apple-touch-icon" href="/icon.png" />
 
-    <!-- ✅ Open Graph -->
-    <meta property="og:title" content="VisionariesAI Labs | AI Solutions & Products" />
-    <meta
-      property="og:description"
-      content="Transform your business with cutting-edge AI solutions. Custom AI development, ML products, and enterprise consulting."
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://visionariesai.com/" />
-    <meta property="og:image" content="/icon.png" />
+  <!-- ✅ SEO -->
+  <meta name="description"
+    content="VisionariesAI Labs - Leading AI service and product company. We build intelligent systems that transform businesses. Custom AI solutions, ML products, and enterprise consulting." />
+  <meta name="author" content="VisionariesAI Labs" />
+  <meta name="keywords"
+    content="AI, Artificial Intelligence, Machine Learning, ML, Mobile Apps, Web Apps, AI Products, AI Services, Enterprise AI, VisionariesAI" />
+  <link rel="canonical" href="https://visionariesai.com/" />
 
-    <!-- ✅ Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/icon.png" />
-  </head>
+  <!-- ✅ Open Graph -->
+  <meta property="og:title" content="VisionariesAI Labs | AI Solutions & Products" />
+  <meta property="og:description"
+    content="Transform your business with cutting-edge AI solutions. Custom AI development, ML products, and enterprise consulting." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://visionariesai.com/" />
+  <meta property="og:image" content="/icon.png" />
 
-  <body>
-    <div id="root"></div>
-    <!-- Dev only (Vite replaces this in build output) -->
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- ✅ Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="/icon.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <!-- Dev only (Vite replaces this in build output) -->
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
